--- a/debian/rules
+++ b/debian/rules
@@ -7,8 +7,9 @@
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
-export DH_VERBOSE=1
-#export PYBUILD_NAME=snapsettings
+#export DH_VERBOSE=1
+export PYBUILD_NAME=traffictoll
+export PYBUILD_INSTALL_ARGS=--install-lib=/usr/share/traffictoll/ --install-scripts=/usr/bin/
 
 %:
-	dh $@ --with python3
+	dh $@ --with python3 --use-pep517 --buildsystem=pybuild
