--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,6 @@ Homepage: https://github.com/wasta-linux/python3-traffictoll
 
 Package: python3-traffictoll
 Architecture: all
-Depends: ${python3:Depends}, ${misc:Depends}, python3-loguru
+Depends: ${python3:Depends}, ${misc:Depends}
 Suggests:
 Description: Debian package of PyPI traffictoll package.
