update for jammy builds

--- a/debian/rules
+++ b/debian/rules
@@ -9,7 +9,8 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 export PYBUILD_NAME=traffictoll
-export PYBUILD_INSTALL_ARGS=--install-lib=/usr/lib/python3/dist-packages/ --install-scripts=/usr/bin/
+#export PYBUILD_INSTALL_ARGS=--install-lib=/usr/lib/python3/dist-packages/ --install-scripts=/usr/bin/
 
 %:
-	dh $@ --with python3 --use-pep517 --buildsystem=pybuild
+	#dh $@ --with python3 --use-pep517 --buildsystem=pybuild
+	dh $@ --with python3 --buildsystem=pybuild
