--- a/debian/control
+++ b/debian/control
@@ -6,14 +6,14 @@ Build-Depends:
  debhelper (>= 11),
  dh-python,
  python3-setuptools,
- python3.8-all
+ python3-all (>=3.8)
 Standards-Version: 3.9.7
 Homepage: https://github.com/wasta-linux/python3-traffictoll
 
 Package: python3-traffictoll
 Architecture: all
 Depends:
- python3 (>=3.8) | python3.8,
+ python3 (>=3.8),
  ${python3:Depends},
  ${misc:Depends}
 Description: Debian package forked from PyPI traffictoll package.
